--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
+    android:background="@drawable/material_18"
     tools:context=".CategorySelect">
 
     <Button
@@ -35,8 +35,7 @@
         android:id="@+id/slideViewPager"
         android:layout_width="393dp"
         android:layout_height="548dp"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
-        android:backgroundTint="@color/transparency"
+        android:background="@color/transparency"
         android:foregroundGravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +47,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:background="@color/transparency"
+        android:fontFamily="@font/open_sans_light"
         android:text="Back"
+        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
+        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/dotsLayout"
         app:layout_constraintHorizontal_bias="0.0"
@@ -61,7 +63,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:background="@color/transparency"
+        android:fontFamily="@font/open_sans_light"
         android:text="Next"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/dotsLayout"
