--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -2,106 +2,145 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#008577"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/material_shapes"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/txt_titlemenu"
         android:layout_width="413dp"
         android:layout_height="222dp"
         android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/francois_one"
+        android:fontFamily="@font/lato"
         android:gravity="center"
+        android:paddingBottom="80dp"
         android:text="Year!"
-        android:textColor="#010101"
-        android:textSize="56pt"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/common_google_signin_btn_text_dark"
+        android:textSize="54pt"
+        android:textStyle="normal"
+        android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txt_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fontFamily="@font/francois_one"
-        android:gravity="center"
-        android:text="Select Category:"
-        android:textColor="#010101"
-        android:textSize="10pt"
-        app:layout_constraintTop_toBottomOf="@+id/txt_titlemenu"
-        tools:layout_editor_absoluteX="0dp" />
-
     <Button
         android:id="@+id/btn_selectCategory"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
+        android:layout_width="207dp"
+        android:layout_height="105dp"
         android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/francois_one"
-        android:text="Select Category"
+        android:layout_marginTop="120dp"
+        android:capitalize="none"
+        android:drawableTop="@drawable/icons8person48"
+
+        android:fontFamily="@font/open_sans_light"
+        android:gravity="bottom"
+        android:paddingBottom="20dp"
+        android:text="1 Player"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="#010101"
-        android:textSize="20sp"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_category" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_titlemenu" />
 
     <Button
-        android:id="@+id/btn_TwoPlayer"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fontFamily="@font/francois_one"
-        android:text="2 Player"
-        android:textColor="#010101"
-        android:textSize="20sp"
+        android:id="@+id/btn_profile"
+        android:layout_width="207dp"
+        android:layout_height="105dp"
+        android:drawableTop="@drawable/icons8userprofile48"
+        android:fontFamily="@font/open_sans_light"
+        android:gravity="bottom"
+        android:onClick="logout"
+        android:paddingBottom="20dp"
+        android:text="My Profile"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_howToPlay" />
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toEndOf="@+id/btn_howToPlay"
+        app:layout_constraintTop_toBottomOf="@+id/btn_TwoPlayer" />
 
     <Button
         android:id="@+id/btn_howToPlay"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
+        android:layout_width="207dp"
+        android:layout_height="105dp"
         android:layout_gravity="center"
-        android:fontFamily="@font/francois_one"
+        android:drawableTop="@drawable/icons8howtoplay48"
+        android:fontFamily="@font/open_sans_light"
+        android:gravity="bottom"
+        android:paddingBottom="20dp"
         android:text="How To Play"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="#010101"
-        android:textSize="20sp"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_selectCategory" />
+
+    <Button
+        android:id="@+id/btn_TwoPlayer"
+        android:layout_width="207dp"
+        android:layout_height="105dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="120dp"
+        android:drawableTop="@drawable/icons82player8"
+        android:fontFamily="@font/open_sans_light"
+        android:gravity="bottom"
+        android:paddingBottom="20dp"
+        android:text="2 Player"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#010101"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toEndOf="@+id/btn_selectCategory"
+        app:layout_constraintTop_toBottomOf="@+id/txt_titlemenu" />
 
     <Button
         android:id="@+id/Logout"
         android:layout_width="129dp"
         android:layout_height="65dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="64dp"
-        android:layout_marginBottom="120dp"
+        android:fontFamily="@font/open_sans_light"
         android:onClick="logout"
         android:text="Logout"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textAllCaps="false"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.646"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_profile" />
 
-    <Button
-        android:id="@+id/btn_profile"
-        android:layout_width="129dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="120dp"
-        android:onClick="logout"
-        android:text="Profile"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="180dp"
+        android:fontFamily="@font/open_sans_light"
+        android:text="1 Image. 1 Year. Can you guess it? "
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btn_selectCategory"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.201"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
