--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="#008577"
-    android:orientation="vertical">
+    android:background="@drawable/random3"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
 
     <TextView
@@ -14,17 +14,53 @@
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_gravity="center"
-        android:fontFamily="@font/voltaire"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/lato"
         android:gravity="center"
         android:text="Historical"
         android:textColor="#000000"
-        android:textSize="32pt" />
+        android:textSize="24pt" />
 
 
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/txt_roundOn3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="1dp"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingRight="10dp"
+                android:text="Round"
+                android:textColor="#010101"
+                android:textSize="12pt"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_scoreOn4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginBottom="1dp"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:text="Score"
+                android:textColor="#010101"
+                android:textSize="12pt"
+                android:textStyle="bold" />
+        </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
@@ -37,36 +73,41 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="4dp"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:paddingRight="10dp"
-                android:text="Round: 5"
+                android:text="5"
                 android:textColor="#010101"
-                android:textSize="14pt" />
+                android:textSize="12pt"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txt_scoreOn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginLeft="57dp"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
-                android:text="Score: 3"
+                android:text="3"
                 android:textColor="#010101"
-                android:textSize="14pt" />
+                android:textSize="12pt"
+                android:textStyle="bold" />
         </TableRow>
 
     </TableLayout>
 
+
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/image"
-        android:layout_width="360dp"
-        android:layout_height="270dp"
+        android:layout_width="346dp"
+        android:layout_height="253dp"
         android:layout_gravity="center"
         android:layout_marginTop="0dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center" />
-
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -75,35 +116,38 @@
 
         <TableRow
             android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/txt_YourGuess"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Your Guess:"
                 android:textColor="#010101"
-                android:textSize="12pt" />
+                android:textSize="14pt" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <EditText
                 android:id="@+id/numberEnteredEt"
                 android:layout_width="85dp"
                 android:layout_height="20pt"
                 android:layout_marginLeft="133dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginRight="133dp"
-                android:background="@color/cardview_light_background"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/mybutton2"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:inputType="number"
                 android:maxLength="4"
@@ -116,11 +160,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="You Scored:"
                 android:textColor="#010101"
-                android:textSize="12pt" />
+                android:textSize="14pt" />
 
         </TableRow>
 
@@ -134,7 +180,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:fontFamily="@font/francois_one"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:paddingLeft="120dp"
                 android:text="Correct Answer:"
@@ -146,45 +192,53 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/francois_one"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:paddingRight="140dp"
                 android:text=" Year"
                 android:textColor="#9db847"
-                android:textSize="14pt" />
+                android:textSize="14pt"
+                android:textStyle="bold" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="24dp" >
+            android:layout_height="24dp"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/submitGuess"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/open_sans_light"
                 android:gravity="center"
                 android:text="Submit Guess"
+                android:textAllCaps="false"
                 android:textColor="#010101"
-                android:textSize="8pt" />
+                android:textSize="8pt"
+                android:textStyle="bold" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/nextQuestion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:fontFamily="@font/open_sans_light"
                 android:gravity="center"
                 android:text="Next Round"
+                android:textAllCaps="false"
                 android:textColor="#010101"
-                android:textSize="8pt" />
+                android:textSize="8pt"
+                android:textStyle="bold" />
         </TableRow>
     </TableLayout>
 
