--- a/app/src/main/res/layout/activity_two_player_category_screen.xml
+++ b/app/src/main/res/layout/activity_two_player_category_screen.xml
@@ -4,13 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
+    android:background="@drawable/material_18"
     tools:context=".CategorySelect">
+
+    <TextView
+        android:id="@+id/txt_CategoryInfo2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="53dp"
+        android:layout_marginEnd="50dp"
+        android:fontFamily="@font/open_sans_light"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slideViewPager" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/slideViewPager"
-        android:layout_width="419dp"
-        android:layout_height="497dp"
+        android:layout_width="416dp"
+        android:layout_height="268dp"
         android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:backgroundTint="@color/transparency"
         android:foregroundGravity="center"
@@ -22,61 +41,88 @@
         android:id="@+id/dotsLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="77dp"
         android:orientation="horizontal"
         android:padding="20dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/catergory_button"></LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/catergory_button2"></LinearLayout>
 
     <Button
         android:id="@+id/prevBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="139dp"
         android:background="@color/transparency"
+        android:fontFamily="@font/open_sans_light"
         android:text="Back"
+        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
+        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/dotsLayout"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slideViewPager" />
+        app:layout_constraintTop_toBottomOf="@+id/catergory_button2" />
 
     <Button
         android:id="@+id/nextBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="139dp"
         android:background="@color/transparency"
+        android:fontFamily="@font/open_sans_light"
         android:text="Next"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.979"
         app:layout_constraintStart_toEndOf="@+id/dotsLayout"
-        app:layout_constraintTop_toBottomOf="@+id/slideViewPager" />
+        app:layout_constraintTop_toBottomOf="@+id/catergory_button2" />
 
     <Button
         android:id="@+id/catergory_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="196dp"
+        android:layout_height="90dp"
+        android:background="@drawable/mybutton"
+        android:drawableTop="@drawable/icons8person48"
+        android:fontFamily="@font/open_sans_light"
+        android:gravity="bottom|center"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:text="Film Posters"
+        android:textAllCaps="false"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/slideViewPager" />
 
     <Button
         android:id="@+id/catergory_button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="196dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/mybutton"
+        android:drawableTop="@drawable/icons8person48"
+        android:fontFamily="@font/open_sans_light"
+        android:gravity="bottom|center"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:text="Film Posters"
+        android:textAllCaps="false"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slideViewPager" />
+        app:layout_constraintTop_toBottomOf="@+id/catergory_button" />
 
 
 </android.support.constraint.ConstraintLayout>
