--- a/app/src/main/res/layout/activity_two_player_game_screen.xml
+++ b/app/src/main/res/layout/activity_two_player_game_screen.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="#008577"
-    android:orientation="vertical">
+    android:background="@drawable/random3"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
 
     <TextView
@@ -15,13 +15,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
-        android:layout_marginBottom="5dp"
-        android:fontFamily="@font/francois_one"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/lato"
         android:gravity="center"
         android:paddingRight="10dp"
         android:text="Round: 5"
         android:textColor="#010101"
-        android:textSize="14pt" />
+        android:textSize="16pt" />
 
 
     <TableLayout
@@ -40,12 +41,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_marginBottom="6dp"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Player 1  Score: 0"
                 android:textColor="#010101"
-                android:textSize="10pt" />
+                android:textSize="10pt"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txt_scoreOn2"
@@ -53,12 +56,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_marginBottom="6dp"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Player 2 Score: 0"
                 android:textColor="#010101"
-                android:textSize="10pt" />
+                android:textSize="10pt"
+                android:textStyle="bold" />
         </TableRow>
 
     </TableLayout>
@@ -69,6 +74,7 @@
         android:layout_height="270dp"
         android:layout_gravity="center"
         android:layout_marginTop="0dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center" />
 
 
@@ -79,15 +85,17 @@
 
         <TableRow
             android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/txt_YourGuess"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Player 1 Guess:"
                 android:textColor="#010101"
@@ -97,8 +105,8 @@
 
         <TableRow
             android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <EditText
                 android:id="@+id/numberEnteredEt"
@@ -106,13 +114,13 @@
                 android:layout_height="20pt"
                 android:layout_marginLeft="133dp"
                 android:layout_marginRight="133dp"
-                android:background="@color/cardview_light_background"
-                android:fontFamily="@font/francois_one"
+                android:background="@drawable/mybutton2"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:inputType="number"
                 android:maxLength="4"
                 android:textColor="#010101"
-                android:textSize="14pt"
+                android:textSize="12pt"
                 android:visibility="visible" />
 
             <EditText
@@ -121,13 +129,13 @@
                 android:layout_height="20pt"
                 android:layout_marginLeft="133dp"
                 android:layout_marginRight="133dp"
-                android:background="@color/cardview_light_background"
-                android:fontFamily="@font/francois_one"
+                android:background="@drawable/mybutton2"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:inputType="number"
                 android:maxLength="4"
                 android:textColor="#010101"
-                android:textSize="14pt"
+                android:textSize="12pt"
                 android:visibility="gone" />
 
             <TextView
@@ -135,22 +143,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/francois_one"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Player 1 Scored: 45  "
                 android:textColor="#010101"
-                android:textSize="10pt" />
+                android:textSize="12pt" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/txt_YouScored2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginTop="6dp"
+                android:layout_marginRight="20dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="  Player 2 Scored: 0"
                 android:textColor="#010101"
-                android:textSize="10pt" />
+                android:textSize="12pt" />
 
         </TableRow>
 
@@ -164,7 +181,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:fontFamily="@font/francois_one"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:paddingLeft="120dp"
                 android:text="Correct Answer:"
@@ -176,24 +194,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/francois_one"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:paddingRight="140dp"
                 android:text=" Year"
                 android:textColor="#9db847"
-                android:textSize="14pt" />
+                android:textSize="14pt"
+                android:textStyle="bold" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="24dp" >
+            android:layout_height="24dp"
+            android:layout_marginTop="15dp"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/submitGuess"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Submit Guess"
                 android:textColor="#010101"
@@ -204,6 +227,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Submit Guess"
                 android:textColor="#010101"
@@ -214,14 +238,16 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/nextQuestion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Next Round"
                 android:textColor="#010101"
